[project]
name = "les-mysteres-de-paris-backend"
version = "0.1.0"
description = "FastAPI backend for Les Mystères de Paris AI-Chronicles"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "wandb>=0.18.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
    "boto3>=1.42.59",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

